bpo-33182: Fix pointer types in _testembed